--- a/app/manifest.json
+++ b/app/manifest.json
@@ -5,7 +5,7 @@
   "content_scripts": [
     {
       "matches": ["https://github.com/*"],
-      "js": ["hello"]
+      "js": ["src/content/index.tsx"]
     }
   ],
   "host_permissions": [
